[package]
name = "macrodb"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
description = "Macro-generated in-memory databased for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/xfbs/macrodb"
keywords = ["in-memory", "database", "relational"]
categories = ["database-implementations", "data-structures"]

[[bench]]
name = "single_table"
harness = false

[dependencies]
paste = "1.0.11"

[dev-dependencies]
avl = "0.6.2"
btree-slab = "0.5.1"
criterion = "0.4.0"
hashbrown = "0.13.1"
im = "15.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
strum = { version = "0.24.1", features = ["derive"] }
